--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,2 +1,13 @@
 * {
   box-sizing: border-box; }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #fff; }
+
+#root {
+  width: 100%;
+  height: 100%; }
