--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,1 +1,16 @@
-@import "game.scss";
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
